RESOLVED FIXED287989
Null check URL before adding it to an NSDictionary for an NSError's userInfo
https://bugs.webkit.org/show_bug.cgi?id=287989
Summary Null check URL before adding it to an NSDictionary for an NSError's userInfo
Alex Christensen
Reported 2025-02-19 11:44:09 PST
Attachments
Alex Christensen
Comment 1 2025-02-19 11:45:55 PST
EWS
Comment 2 2025-02-19 13:14:12 PST
Committed 290636@main (400b0bd205f7): <https://commits.webkit.org/290636@main> Reviewed commits have been landed. Closing PR #40881 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.