Null check URL before adding it to an NSDictionary for an NSError's userInfo https://bugs.webkit.org/show_bug.cgi?id=287989 rdar://145094608

Reviewed by Richard Robinson.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(nsErrorFromExceptionDetails):

Canonical link: https://commits.webkit.org/290636@main